# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributedcamera/distributedcamera.gni")

module_out_path = "distributed_camera/dcamera_sink_mgr_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/callback",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/eventbus",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/interface",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr/listener",
    "${services_path}/cameraservice/cameraoperator/client/include",
    "${services_path}/cameraservice/base/include",
    "${services_path}/channel/include",
    "${services_path}/data_process/include/pipeline",
    "${services_path}/data_process/include/interfaces",
    "${services_path}/data_process/include/utils",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${distributedcamera_hdf_path}/interfaces/include",
    "${innerkits_path}/native_cpp/camera_source/include",
    "${innerkits_path}/native_cpp/camera_source/include/callback",

    "${fwk_utils_path}/include/eventbus",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${fwk_common_path}/utils/include",
    "${fwk_common_path}/log/include",

    "//drivers/peripheral/base",
  ]
}

ohos_unittest("DCameraSinkMgrTest") {
  module_out_path = module_out_path

  sources = [
    "dcamera_sink_access_control_test.cpp",
    "dcamera_sink_controller_test.cpp",
    "dcamera_sink_data_process_test.cpp",
    "dcamera_sink_dev_test.cpp",
    "dcamera_sink_output_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${services_path}/cameraservice/sinkservice:distributed_camera_sink",
    "${services_path}/channel:distributed_camera_channel",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraSinkMgrTest\"",
    "LOG_DOMAIN=0xD004100",
  ]
}

group("dcamera_sink_mgr_test") {
  testonly = true
  deps = [ ":DCameraSinkMgrTest" ]
}
